re-work and prepare for next release